--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.2.6",
+    "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.462.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "react-toast": "^1.0.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tooltip": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
